--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">FirebaseTutorial</string>
+    <string name="app_name">Android Firebase Tutorial</string>
+    <string name="title_activity_main">@string/app_name</string>
+    <string name="add">Add</string>
+    <string name="close">Close</string>
+    <string name="name">Name:</string>
+    <string name="description">Description:</string>
 </resources>
